--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,18 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Source Code Pro', Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-size: 14px;
+  padding: 0.5em;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  white-space: pre-wrap;
+  line-height: 1.6;
+  color: #333;
+  /* Warna teks */
+  display: inline-block;
+  /* Menjaga elemen code dalam satu baris */
+  overflow-x: auto;
+  /* Membuat scrollbar horizontal jika konten melebihi lebar */
 }
